--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "smartwakacje",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/index.js",
   "scripts": {
-    "scrape": "node src/scrape.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fetch": "node scrape.js",
+    "fetch:custom": "node scrape.js"
   },
   "keywords": [],
   "author": "",
