--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "fetch": "node scrape.js",
     "fetch:custom": "node scrape.js"
   },
